<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="-124dp"
        android:layout_marginEnd="-183dp"
        android:ems="10"
        android:hint="@string/enter_file_name"
        android:inputType="text" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="179dp"
        android:layout_toStartOf="@+id/button3"
        android:layout_toEndOf="@+id/button2"
        android:width="98dp"
        android:text="@string/record" />

    <Button
        android:id="@+id/button2"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="237dp"
        android:width="98dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="10dp"
        android:width="98dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="38dp"
        android:layout_toStartOf="@+id/button3"
        android:text="@string/stop_playing" />
</RelativeLayout>